--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
