--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-drag-drop-files": "^2.3.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "tailwindcss": "3.3.3"
   }
 }
