--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
